<resources>
    <string name="news_all_sort">房产:汽车:科技:生活:旅游</string>
    <string name="news_all_id">212:213:214:215:216</string>
    <string name="photo_all_sort">奇趣:摄影:汽车:美女</string>
    <string name="photo_all_id">220:219:218:217</string>
    <string name="magazine_all_sort">汽车:产业园:旅游:生活</string>
    <string name="magazine_all_id">228:230:231:232</string>
    <string name="load_fail">抱歉，加载订阅信息失败。</string>
    <string name="home_load">努力加载中...</string>
    <string name="mo_more_mag">没有更多杂志了</string>
    <string name="meike_info">每刻通知</string>
    <string name="logining">正在登陆...</string>
    <string name="picture_load">正在为您加载...</string>
    <string name="share_url_main">http://www.meike15.com/click.aspx?</string>
    <string name="alert">提示</string>
    <string name="short_password">密码长度应该不少于6位</string>
    <string name="no_ref_magazine">没有搜索到相关杂志</string>
    <string name="is_quit">是否要退出每刻？</string>
    <string name="vote_result">投票结果：</string>
    <string name="take_part">您已参与</string>
    <string name="is_logout">确认注销登录？</string>
    <string name="if_unbind">是否解除绑定?</string>
    <string name="feedback_load">正在为您提交，请稍等</string>
    <string name="close">关闭</string>
    <string name="ok">确定</string>
    <string name="cacel">取消</string>
    <string name="share_apk">我在使用每刻资讯，自主订阅，永久免费，你也试试吧！下载地址：http://www.meike15.com/meike15.apk</string>
    <string name="thanks_gelivable">谢谢您的给力</string>
    <string name="meike_share">每刻分享</string>
    <string name="no_magazine">暂无新刊</string>
    <string name="no_vote">暂无投票</string>
    <string name="note_vote_toast">本期杂志暂无投票！</string>
    <string name="load_finish">下载已完成</string>
    <string name="watch_dm">查看DM</string>
    <string name="not_load">未下载杂志</string>
    <string name="begin_load">开始下载</string>
    <string name="loading">下载中</string>
    <string name="speak_sth">说点什么吧...</string>
    <string name="input_email">请输入注册邮箱...</string>
    <string name="find_password_ok">请登录邮箱设置新密码...</string>
    <string name="find_password_fail">密码找回失败:</string>
    <string name="no_critic">此版本暂不支持抽奖，我们将会在下个版本添加，敬请关注！</string>
    <string name="no_award">此版本暂不支持有奖调查，我们将会在下个版本添加，敬请关注！</string>
    <string name="bind">已绑定</string>
    <string name="unbind">未绑定</string>
    <string name="message_share">短信分享</string>
    <string name="sina_share">新浪微博</string>
    <string name="tenc_share">腾讯微博</string>
    <string name="app_name">每刻资讯</string>
    <string name="collections">我的收藏</string>
    <string name="favorites">猜你喜欢</string>
    <string name="interaction">互动</string>
    <string name="headline">头条</string>
    <string name="news">新闻</string>
    <string name="photo">美图</string>
    <string name="subscribe">订阅</string>
    <string name="store">收藏</string>
    <string name="vote">投票</string>
    <string name="comment">抽奖</string>
    <string name="survey">有奖调查</string>
    <string name="topic">话题</string>
    <string name="house">房产</string>
    <string name="car">汽车</string>
    <string name="fashion">时尚</string>
    <string name="digital">数码</string>
    <string name="lift">生活</string>
    <string name="traval">旅游</string>
    <string name="magazine">杂志</string>
    <string name="news_image">新闻附图</string>
    <string name="sub_have">已订阅</string>
    <string name="sub_no">我要订阅</string>
    <string name="sub_manager">订阅管理</string>
    <string name="reply">跟帖</string>
    <string name="context">原文</string>
    <string name="temp1">每刻新闻</string>
    <string name="temp2">收藏&amp;消息</string>
    <string name="temp3">每刻美图</string>
    <string name="temp4">光博会</string>
    <string name="temp5">群光广场</string>
    <string name="temp6">柏氏专卖</string>
    <string name="temp7">volvo沃尔沃</string>
    <string name="temp8">Benz奔驰</string>
    <string name="temp9">Dior迪奥</string>
    <string name="temp10">沃尔玛</string>
    <string name="temp11">家乐福</string>
    <string name="temp12">摩托罗拉</string>
    <string name="temp13">苏宁电器</string>
    <string name="temp14">国美电器</string>
    <string name="temp15">格力电器</string>
    <string name="temp16">西门子</string>
    <string name="next">下一题</string>
    <string name="commit">提交</string>
    <string name="survey_thanks">感谢您的参与！</string>
    <string name="survey_notice">中奖结果及更多内容请关照官方公告</string>
    <string name="finish">完成</string>
    <string name="all">全部</string>
    <string name="hot">热点</string>
    <string name="girl">美女</string>
    <string name="photograph">摄影</string>
    <string name="fun">奇趣</string>
    <string name="txt_opder2">● 营业时间；11:00-21:00</string>
    <string name="txt_opder3">● 用餐需提前1天预约，如遇等位，请耐心等候</string>
    <string name="txt_opder4">● 仅限大厅使用，不可预订包房</string>
    <string name="txt_opder5">● 预约电话：027-85892777</string>
    <string name="txt_opder6">● 商家地址：武汉市解放大道武汉国际广场B座9层</string>
    <string name="ptr_pull_to_refresh">下拉可以刷新</string>
    <string name="ptr_release_to_refresh">松开可以刷新</string>
    <string name="ptr_refreshing">正在载入数据</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="share_photo">分享每刻美图：</string>
    <string name="share_news">这篇文章很犀利，推荐一读，来自每刻资讯:</string>
    <string name="share_magazine">分享每刻杂志：</string>
    <string name="load_image_Success">成功下载到相册</string>
    <string name="load_image_fail">图片下载失败</string>
    <string name="no_review">暂无评论</string>
    <string name="news_user">手机版网友</string>
    <string name="news_reply_time">13小时前</string>
    <string name="news_reply_body">没什么谈的，人不敬我，我何必敬人。</string>
    <string name="news_reply">回复</string>
    <string name="news_reply_count">跟帖</string>
    <string name="txt_forget_password">请填写您的注册邮箱，我们会将重置链接发送到您的邮箱中。</string>
    <string name="txt_example_email">请输入邮箱</string>
    <string name="send">发送</string>
    <string name="forget_passwd">密码找回</string>
    <string name="feedback">使用反馈</string>
    <string name="contact">联系方式：</string>
    <string name="emial_or_phone">Email或手机号</string>
    <string name="feedback_text">反馈内容：</string>
    <string name="register">注册</string>
    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="password_again">再次输入密码</string>
    <string name="different_password">两次输入的密码不一致!</string>
    <string name="show_passwd">显示密码</string>
    <string name="login">登录</string>
    <string name="goto_forget_passwd">忘记密码？</string>
    <string name="voting">投票进行中</string>
    <string name="voted">投票已结束</string>
    <string name="select_choice">请选择你的选项！</string>
    <string name="thx_voting">感谢投票!</string>
    <string name="watch_result">查看结果</string>
    <string name="get_not_result">抱歉！未能从服务器获取投票结果。</string>
    <string name="excetion">抱歉，连接服务器发生异常，请求失败。</string>
    <string name="touchdown">已绑定</string>
    <string name="touchup">解除绑定</string>
    <string name="mail_toast">邮箱不能为空</string>
	<string name="password_toast">密码不能为空</string>
	<string name="login_sucesses">登陆成功</string>
	<string name="login_fails">登陆失败</string>
	<string name="register_sucesses">注册成功</string>
	<string name="register_fails">注册失败</string>
    <string name="title01">为何美国人拿的奥运奖牌比我们多很多呢啊啊啊</string>
    <string name="body01">收藏时间：2012-12-30  16:12</string>
    <string name="mag_title1">五楼品牌服装升级</string>
    <string name="mag_body1">形象全面升级，隆重开幕，快来体验吧。（哥伦比亚，新亚当，NIKE,LIVIS诺诗蓝，狼爪）</string>
    <string name="mag_title2">清凉夏，群光2楼升级待卖</string>
    <string name="mag_body2">匡威，大嘴猴，i‘m david。熊猫人形象全面升级，隆重开幕，快来体验吧!</string>
    <string name="mag_title3">森田面膜买一送一</string>
    <string name="mag_body3">BIF缤纷夏日，森田有礼！药妆玻尿酸面膜买一送一现价59元</string>
    <string name="mag_title4">JACK JONES特卖</string>
    <string name="mag_body4">活动时间 ：08.02-08.15</string>
    <string name="mag_title5">ADIDAS等专柜全新形象登场</string>
    <string name="mag_body5">5f运动休闲馆ADIDAS,NIKE360，Le COQ SPORTIF ,AIDDAS生活全新形象闪亮开幕，赶快来体验不一样的感觉吧!</string>
    <string name="headline_title">销品茂停车场两天四案</string>
    <string name="headline_body">7月8日下午6点，武汉一高校员工张先生开着一辆奥迪A4车来到销品茂。</string>
    <string name="news_body">　中新网9月11日电 据日本共同社报道，据日本政府相关人士透露，外务省11日派遣亚洲大洋洲局长杉山晋辅前往北京，就日本政府所谓钓鱼岛“国有化”方针同中国政府交换意见。
　　据悉，日本政府11日上午召开内阁会议，决定从2012年度预算的预备费中拨出20.5亿日元(约合人民币1.66亿元)“购买”钓鱼岛的3个岛屿。日本政府考虑最早于11日同“土地权所有者”签订合同。
　　针对日本所谓“购岛”行径，中国政府9月10日严正声明，日本政府的所谓“购岛”完全是非法的、无效的，丝毫改变不了日本侵占中国领土的历史事实，丝毫改变不了中国对钓鱼岛及其附属岛屿的领土主权。</string>
    <string name="photos_title">两女子接吻引围观</string>
    <string name="vote_question">农民工进城打工，温饱问题尚未能解决，你怎么看待这个问题？</string>
    <string name="vote_number">2879</string>
    <string name="vote_title1">1.需要加强扶持</string>
    <string name="vote_title2">2.已经足够，无需调整</string>
    <string name="vote_title3">3.恐怕很难改变</string>
    <string name="photo1_body">陈苗苗6岁那年，一次患病后腰部以下失去知觉，再也无力站立起来了。从小学一年级到六年级，母亲一路推着坐在轮椅上的苗苗上学和放学。由于无法忍受久坐的疼痛和身体的不便，苗苗上课的时候只能以趴着的方式进行。S-Design/JBR</string>
    <string name="account">帐号</string>
    <string name="setting">设置</string>
    <string name="others">其他</string>
    <string name="set_login">登录每刻</string>
    <string name="login_summary">登录后可同步收藏和订阅DM</string>
    <string name="account_manager">社交帐号管理</string>
    <string name="account_summary">绑定和管理新浪微博等社交帐号</string>
    <string name="settings">设置</string>
    <string name="flow">流量控制</string>
    <string name="cache">清除缓存</string>
    <string name="more">更多</string>
    <string name="more_summary">更多个性化设置</string>
    <string name="set_feedback">用户反馈</string>
    <string name="feedback_summary">欢迎给我们提出宝贵意见</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_summary">当前版本为1.0</string>
    <string name="text_size">文章字体大小</string>
    <string name="text_summary">当前字体大小为18号</string>
    <string name="push">开启推送功能</string>
    <string name="push_message">推送消息</string>
    <string name="message_collect">消息与收藏</string>
    <string name="push_smmary">开启推送功能后，我们会第一时间内推送要闻给您</string>
    <string name="screen">屏幕亮度</string>
    <string name="screen_summary">保持屏幕正常亮度</string>
    <string name="toweibo">社交账号管理</string>
    <string name="aboutus_text4">联系我们</string>
    <string name="aboutus_text5">官方网站：http：//www.meike15.com/</string>
    <string name="aboutus_text6">新浪微博：@每刻</string>
    <string name="aboutus_text7">电子邮箱：support@meike.com</string>
    <string name="aboutus_text8">联系电话：027-87888888/027-87778888</string>
    <string name="aboutus_text9">欢迎内容接入合作</string>
    <string name="aboutus">关于我们</string>
	<string name="download">下载</string>
	<string name="mymeike">我的每刻</string>
	<string name="login_toast">用户已登陆</string>
	<string name="network_exception">网络连接异常</string>
	<string name="check_network">请检查网络连接</string>
	<string name="no_more_news">没有更多新闻了</string>
	<string name="no_more_photo">没有更多图片了</string>
	<string name="no_more_comment">没有更多评论了</string>
	<string name="no_more_fav">没有更多收藏了</string>
	<string name="last_page">已经是最后一页了</string>
	<string name="no_more_collect">没有更多收藏了</string>
	<string name="larger">较大</string>
	<string name="largest">超大</string>
	<string name="nomal">正常</string>
	<string name="smaller">较小</string>
	<string name="smallest">超小</string>
	<string name="current_text_size">当前字体大小为</string>
	<string name="review_name">手机版网友</string>
	<string name="top">顶</string>
	<string name="review_toast">没有评论</string>
	<string name="review_no_more">没有更多评论了</string>
	<string name="review_no">暂无评论</string>
 <string name="review_succeed">评论成功</string>
	<string name="review_fail">评论失败</string>
	<string name="review_null">评论内容为空</string>
	<string name="review_day">天前</string>
	<string name="review_hour">小时前</string>
	<string name="review_min">分钟前</string>
	<string name="review_sec">秒前</string>
	<string name="please_login">请先登陆</string>
	<string name="top_succeed">顶</string>
	<string name="reply_succeed">回复成功</string>
	<string name="reply_fail">回复失败</string>
	<string name="favorite_succeed">收藏成功</string>
	<string name="favorite_fail">收藏失败</string>
	<string name="sub_suceed">订阅成功</string>
	<string name="sub_fail">已经订阅了</string>
	<string name="unsub_fail">取消订阅失败</string>
	<string name="unsub_suceed">取消订阅成功</string>
	<string name="no_subcribe">没有订阅</string>
	<string name="push_title">穿底双11价，那些超值网货你发现了吗？</string>
</resources>