<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_list_top"
    android:layout_width="fill_parent"
    android:layout_height="35dip"
    android:background="@drawable/list_topbg"
    android:orientation="horizontal"
    android:weightSum="6" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="35dip" >

        <TextView
            android:id="@+id/txt_listtop_1"
            style="@style/list_top_txt"
            android:text="@string/headline" />

        <TextView
            android:id="@+id/txt_listtop_2"
            style="@style/list_top_txt"
            android:layout_height="match_parent"
            android:text="@string/house" />

        <TextView
            android:id="@+id/txt_listtop_3"
            style="@style/list_top_txt"
            android:layout_height="match_parent"
            android:text="@string/car" />

        <TextView
            android:id="@+id/txt_listtop_4"
            style="@style/list_top_txt"
            android:layout_height="match_parent"
            android:text="@string/fashion" />

        <TextView
            android:id="@+id/txt_listtop_5"
            style="@style/list_top_txt"
            android:layout_height="match_parent"
            android:text="@string/lift" />

        <TextView
            android:id="@+id/txt_listtop_6"
            style="@style/list_top_txt"
            android:layout_height="match_parent"
            android:text="@string/traval" />

    </TableRow>

</LinearLayout>