<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:layout="@layout/set_pref_list"
        android:summary="@string/text_summary"
        android:title="@string/text_size" 
        android:key="text_size" 
        android:entryValues="@array/text_size_key"  
        android:entries="@array/text_size" android:defaultValue="key2"/>

    <CheckBoxPreference
        android:layout="@layout/set_pref_check"
        android:summaryOff="开启推送功能，我们会第一时间推送要闻给你"
        android:summaryOn="消息推送关闭"
        android:title="@string/push" 
        android:widgetLayout="@layout/set_checkbox" 
        android:key="push" 
        android:persistent="true"/>
    
    <CheckBoxPreference
        android:layout="@layout/set_pref_check"
        android:summaryOff="保持屏幕正常亮度"
        android:summaryOn="屏幕亮度调节关闭"
        android:title="@string/screen" 
        android:key="wake_lock"
        android:widgetLayout="@layout/set_checkbox"/>

</PreferenceScreen>