<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="28dip"
    android:paddingTop="5dip"
    android:background="@drawable/list_topbg"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/layout_sub_list"
        android:layout_width="fill_parent"
        android:layout_height="28dip"
        android:layout_marginLeft="12dip"
        android:layout_weight="20"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_sub_hot"
                style="@style/sub_list_top_txt"
                android:text="@string/hot" />

            <TextView
                android:id="@+id/txt_sub_car"
                style="@style/sub_list_top_txt"
                android:text="@string/car" />

            <TextView
                android:id="@+id/txt_sub_girl"
                style="@style/sub_list_top_txt"
                android:text="@string/girl" />

            <TextView
                android:id="@+id/txt_sub_photograph"
                style="@style/sub_list_top_txt"
                android:text="@string/photograph" />

            <TextView
                android:id="@+id/txt_sub_fun"
                style="@style/sub_list_top_txt"
                android:text="@string/fun" />
           </TableRow>

    </RelativeLayout>

     <ImageView
            android:id="@+id/img_sub_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_subscription_search" />
</LinearLayout>