<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_normal"
    android:orientation="vertical" >

    <include
        android:id="@+id/order_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        layout="@layout/dm_order_header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_order1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="俏江南2012春夏新款节假日套餐。线上首发！仅999元，享原价2088元【俏江南】合家欢乐宴-大厅10人餐（含服务费）！尊荣服务，惊艳口感......"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/temp_dm_detail_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_order2"
                style="@style/order"
                android:text="@string/txt_opder2" />

            <TextView
                android:id="@+id/txt_order3"
                style="@style/order"
                android:text="@string/txt_opder3" />

            <TextView
                android:id="@+id/txt_ordert4"
                style="@style/order"
                android:text="@string/txt_opder4" />

            <TextView
                android:id="@+id/txt_order5"
                style="@style/order"
                android:text="@string/txt_opder5" />

            <TextView
                android:id="@+id/txt_orde6"
                style="@style/order"
                android:text="@string/txt_opder6" />

            
                
        </LinearLayout>
        <Button
                android:id="@+id/Button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:background="@drawable/dm_detail_buy" />
    </LinearLayout>

   
</RelativeLayout>
